LPS-128658 Fix misalignment of icons in the portlet-topper-toolbar

--- a/modules/apps/frontend-theme/frontend-theme-classic/src/css/portlet/_portlet.scss
+++ b/modules/apps/frontend-theme/frontend-theme-classic/src/css/portlet/_portlet.scss
@@ -55,6 +55,11 @@
 			width: 1.5rem;
 		}
 
+		.portlet-topper-toolbar .component-action {
+			height: 1.5rem;
+			width: 1.5rem;
+		}
+
 		.lexicon-icon {
 			height: 0.875rem;
 			width: 0.875rem;
